kubernetes/openshift/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: saga-api-route
  namespace: saga-demo
spec:
  to:
    kind: Service
    name: order-service
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: grafana-route
  namespace: saga-demo
spec:
  host: grafana-saga-demo.apps.example.com
  to:
    kind: Service
    name: grafana
    weight: 100
  port:
    targetPort: 3000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: jaeger-route
  namespace: saga-demo
spec:
  host: jaeger-saga-demo.apps.example.com
  to:
    kind: Service
    name: jaeger-query
    weight: 100
  port:
    targetPort: 16686
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: prometheus-route
  namespace: saga-demo
spec:
  host: prometheus-saga-demo.apps.example.com
  to:
    kind: Service
    name: prometheus
    weight: 100
  port:
    targetPort: 9090
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
